# OBJParser

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  OBJParser.cpp  OBJParser.h  README.md  sonar-project.properties  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: cmake-single-platform.yml  cpp-linter.yml  linux-cmake-vcpkg.yml  sonar-cloud.yml  windows-cmake-vcpkg.yml
examples/: README.md
src/: OBJParser.cpp  OBJParser.h  main.cpp
test/: OBJParserTests.cpp
